# Dune

./: .gitignore  CMakeLists.txt  Informe.odt  Matrix  Matrix.cpp  PathFinder.cpp  PathFinder.h  README.md  Unit.h  callgrind.out.6807  server.conf
client/: Area.h  CMakeLists.txt  Client.cpp  Client.h  SdlException.cpp  SdlPicturable.cpp  SdlPicturable.h  SdlTexture.cpp  SdlTexture.h  SdlWindow.cpp  SdlWindow.h  main.cpp
client/game/arch/: BlockingQueue.hpp  BuildingButton.cpp  BuildingButton.h  ButtonsController.cpp  ButtonsController.h  Client.cpp  Client.h  ClientPicturable.cpp  ClientPicturable.h  ClientSpritesSupplier.cpp  ClientSpritesSupplier.h  ClientThread.cpp  ClientThread.h  EventsLooperThread.cpp  EventsLooperThread.h  EventsReceptorThread.cpp  EventsReceptorThread.h  EventsSenderThread.cpp  EventsSenderThread.h  Game.cpp  Game.h  GameThread.cpp  GameThread.h  MainButton.cpp  MainButton.h  MainWindow.cpp  MainWindow.h  PanelButton.cpp  PanelButton.h  PicturableButton.cpp  PicturableButton.h  PlayerColor.cpp  PlayerColor.h  RequiresTerrainControllerActionException.cpp  RequiresTerrainControllerActionException.h  ScreenConfiguration.cpp  ScreenConfiguration.h  ScreenInformation.cpp  ScreenInformation.h  SdlPicturable.cpp  (+7 more)
client/game/arch/buttons/: BuildingButton.cpp  BuildingButton.h  ButtonsFactory.cpp  ButtonsFactory.h  PanelButton.cpp  PanelButton.h  UnitButton.cpp  UnitButton.h
client/game/arch/controllers/: ButtonsController.cpp  ButtonsController.h  Controller.cpp  Controller.h  RequiresExternalControllerActionException.cpp  RequiresExternalControllerActionException.h  ScreenController.cpp  ScreenController.h  StatusController.cpp  StatusController.h  TerrainController.cpp  TerrainController.h  WindowController.cpp  WindowController.h
client/game/arch/threads/: EventsLooperThread.cpp  EventsLooperThread.h  EventsReceptorThread.cpp  EventsReceptorThread.h  EventsSenderThread.h
client/game/sdl/: SdlColor.cpp  SdlColor.h  SdlText.cpp  SdlText.h  SdlTexture.cpp  SdlTexture.h  SdlWindow.cpp  SdlWindow.h
commons/: BadFileException.cpp  BadFileException.h  CMakeLists.txt  ClientClosedSocketException.cpp  ClientClosedSocketException.h  ConnectionRefusedException.cpp  ConnectionRefusedException.h  Event.cpp  Event.h  EventHandler.cpp  EventHandler.h  JSONConversion.cpp  JSONConversion.h  JSONUtils.cpp  JSONUtils.h  Lock.cpp  Lock.h  Map.cpp  Map.h  MapConfigurationEvent.h  Matrix.cpp  Matrix.h  PathFinder.cpp  PathFinder.h  Picturable.cpp  Picturable.h  PicturableType.h  Point.cpp  Point.h  PriorityQueue.h  SOException.cpp  SOException.h  Socket.cpp  Socket.h  Sprites.h  Terrain.cpp  Terrain.h  TerrainType.h  Thread.cpp  Thread.h  (+9 more)
commons/events/: ClientEvent.cpp  ClientEvent.h  EventHandler.cpp  EventHandler.h  GameConfigurationEvent.cpp  GameConfigurationEvent.h  GameStatusEvent.cpp  GameStatusEvent.h  MapConfigurationEvent.cpp  MapConfigurationEvent.h  NotificationEvent.cpp  NotificationEvent.h
commons/json/: JSONConversion.cpp  JSONConversion.h  JSONUtils.h  json.hpp
doc/: informe-preentrega.md
editor/: CMakeLists.txt  main.cpp
editor/include/: Editor.h  TerrainCellWidget.h
editor/src/: Editor.cpp
editor/ui/: Editor.ui
resources/config/: Game Configuration.json
resources/maps/: base.map  basic_map.json  basic_map.map  new_map.json
server/: Accepter.cpp  Accepter.h  CMakeLists.txt  Client.cpp  Client.h  Matrix.cpp  Matrix.h  PathFinder.cpp  PathFinder.h  Terrain.cpp  Terrain.h  main.cpp  shaque
server/editor/include/: Editor.h  TerrainCellWidget.h
server/editor/src/: TerrainCellWidget.cpp
server/game/: Accepter.cpp  Accepter.h  Client.cpp  Client.h  Game.h  Matrix.cpp  Matrix.h  PathFinder.cpp  PathFinder.h  PriorityQueue.h  Terrain.h  shaque
server/game/arch/: Accepter.cpp  Accepter.h  AccepterThread.cpp  AccepterThread.h  Client.cpp  Client.h  ClientThread.cpp  ClientThread.h  ConfigMap.cpp  ConfigMap.h  EventsHandler.cpp  EventsHandler.h  Game.cpp  Game.h  GameConfiguration.cpp  GameConfiguration.h  GameControler.cpp  GameControler.h  GameThread.cpp  GameThread.h  Server.cpp  Server.h  ServerThread.cpp  ServerThread.h  shaque.h
server/game/json/: JSONConversion.cpp  JSONConversion.h
server/game/model/: AliveGameObject.cpp  AliveGameObject.h  AttackingUnit.cpp  AttackingUnit.h  Building.cpp  Building.h  Cosechadora.cpp  Cosechadora.h  Especia.cpp  Especia.h  GameObject.cpp  GameObject.h  IGameObject.h  InProgressGameObject.cpp  InProgressGameObject.h  Infanteria.cpp  Infanteria.h  Map.cpp  Map.h  Matrix.cpp  Matrix.h  PathFinder.cpp  PathFinder.h  PathingAlgorithms.cpp  PathingAlgorithms.h  Player.cpp  Player.h  Point.cpp  SelectableGameObject.cpp  SelectableGameObject.h  SiloOrRefinery.cpp  SiloOrRefinery.h  Soldier.h  Terrain.cpp  Terrain.h  TileUtils.cpp  TileUtils.h  Unit.cpp  Unit.h  Vehicle.h  (+6 more)
